<resources>
    <string name="app_name">Location Profile App</string>
    <string-array name="tab_titles">
        <item>Actions</item>
        <item>Profiles</item>
        <item>Places</item>
    </string-array>

    <!-- Actions Tab -->
    <string name="info_button_content_description">Info button</string>
    <string name="actions_explanation_text">Click on the info button for more details.</string>

    <!-- Profiles Tab Main -->
    <string name="add_profile_content_description">Add a new profile</string>
    <string name="currently_active_profile_content_description">Mark currently active profile</string>
    <string name="profile_details_button_content_description">Expand detail info about Profile</string>
    <string name="profiles_empty_list_text">There are no profiles yet. Click on the \'Add\' button in the lower right corner to add a new profile.</string>
    <string name="activate_profile_label">Activate</string>
    <string name="profile_time_label">Time</string>
    <string name="profile_place_label">Place</string>
    <string name="profile_action_label">Action</string>
    <string name="deactivate_profile_button_text">Deactivate</string>
    <string name="activate_profile_button_text">Activate</string>
    <string name="edit_profile_title">Edit Profile</string>
    <!-- Add new Profile -->
    <string name="add_new_profile_title">Add new profile</string>
    <string name="add_profile_actions_label">Actions</string>
    <string name="add_profile_add_action_button_text">Edit Profile Actions</string>
    <string name="add_profile_place_label">Place</string>
    <string name="add_profile_timeframe_label">Time</string>
    <string name="add_profile_button_text">Add Profile</string>
    <string name="add_profile_time_from_label">from</string>
    <string name="add_profile_time_start_hint">start</string>
    <string name="add_profile_time_end_hint">end</string>
    <string name="add_profile_time_to_label">to</string>
    <string name="enter_place_label">Enter</string>
    <string name="exit_place_label">Exit</string>
    <!-- Add actions to profile -->
    <string name="add_actions_to_profile_title">Add Actions</string>
    <string name="add_actions_to_profile_content_description">add action</string>
    <string name="save_button_text">Save</string>
    <string name="add_action_value_label">Value:</string>
    <string name="add_action_action_label">Action:</string>
    <string name="volume_slider_min_val">0</string>
    <string name="add_action_volume_type_label">Type:</string>
    <string name="select_ringtone_button_text">Select</string>
    <string name="select_ringtone_label_text">Ringtone:</string>
    <string name="bluetooth_device_label">Device:</string>
    <string name="disable_bluetooth_label">Disable</string>
    <string name="enable_bluetooth_label">Enable</string>
    <string name="add_action_notification_hint">Notification Content</string>

    <!-- Places Tab -->
    <string name="places_empty_list_text">There are no places yet. Click on the \'Add\' button in the lower right corner to add a new place.</string>
    <string name="add_new_place_title">Add a new place</string>
    <string name="add_place_content_description">Add a new place either manually or automatically</string>
    <string name="add_place_manual_mode_button_text">Manual</string>
    <string name="add_place_auto_mode_button_text">Automatic</string>
    <string name="add_place_title_label">Title</string>
    <string name="edit_place_title">Edit Place</string>
    <string name="lat_long_as_text">%s/%s</string>
    <!-- Add place automatically -->
    <string name="add_place_address_label">Address</string>
    <string name="add_place_automatic_explanation">The app will track your location during the determined time and will calculate a location and radius for you.</string>
    <string name="add_place_start_button_text">Start</string>
    <!-- Add place manually -->
    <string name="add_place_duration_label">Duration</string>
    <string name="add_place_duration_first_option">1 hour</string>
    <string name="add_place_duration_second_option">2 hours</string>
    <string name="add_place_duration_third_option">4 hours</string>
    <string name="add_place_duration_fourth_option">8 hours</string>
    <string name="add_place_manual_button_text">Add Place</string>
    <string name="range_unit">m</string>
    <string name="range_label">Range:</string>
    <string name="slider_start_value">100</string>
    <string name="slider_end_value">300</string>
    <string name="slider_current_value">150</string>
    <string name="slider_step_size">1</string>

    <!-- other -->
    <string name="placeholder_string">Placeholder</string>
    <string name="edit_button_text">Edit</string>
    <string name="delete_button_text">Delete</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

</resources>