<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="10dp"
    android:gravity="center_vertical"
    android:background="@drawable/list_tile_background">

    <ImageView
        android:id="@+id/activeProfileCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:contentDescription="@string/info_button_content_description"
        android:src="@drawable/ic_action_check"
        android:layout_marginStart="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/expandableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/placeholder_string"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/expandableLayout"
        app:layout_constraintStart_toEndOf="@+id/activeProfileCheck"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/currentyActiveProfileIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_location"
        android:layout_marginStart="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/expandableLayout"
        app:layout_constraintStart_toEndOf="@+id/profileTitle"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/currently_active_profile_content_description" />

    <ImageButton
        android:id="@+id/buttonExpand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_arrow_down"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/transparent"
        app:layout_constraintBottom_toTopOf="@id/expandableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profile_details_button_content_description" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expandableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/profileTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_time_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profileTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_string"
            app:layout_constraintBaseline_toBaselineOf="@+id/profileTimeLabel"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/profilePlaceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/profile_place_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileTimeLabel" />

        <TextView
            android:id="@+id/profilePlaceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_string"
            app:layout_constraintBaseline_toBaselineOf="@+id/profilePlaceLabel"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/profileActionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/profile_action_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePlaceLabel" />

        <TextView
            android:id="@+id/profileActionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_string"
            app:layout_constraintBaseline_toBaselineOf="@+id/profileActionLabel"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/expandableButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="end"
            app:layout_constraintTop_toBottomOf="@+id/profileActionLabel">

            <Button
                android:id="@+id/activateProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deactivate_profile_button_text" />

            <Button
                android:id="@+id/editProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_button_text" />

            <Button
                android:id="@+id/deleteProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_button_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
