<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/fragment_padding_vertical"
    android:paddingHorizontal="@dimen/fragment_padding_horizontal"
    tools:context=".views.fragments.AddProfileFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin_top"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTitleProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_place_title_label"
            android:inputType="textCapWords"
            android:textSize="@dimen/text_size_title"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputLayoutActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputLayoutTitle">

        <TextView
            android:id="@+id/actionsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_profile_actions_label"
            android:textSize="@dimen/text_size_title"
            app:layout_constraintBottom_toTopOf="@+id/actionsListText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addActionButton"
            style="@style/SecondaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_profile_add_action_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/actionsListText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/addActionButton"
            tools:text="Bluetooth on, Volume to 2, Wifi disabled" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputLayoutPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutActions" >

        <CheckBox
            android:id="@+id/checkBoxPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_profile_place_label"
            android:textSize="@dimen/text_size_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/addPlaceDropdown"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputLayoutTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutPlace">

        <CheckBox
            android:id="@+id/checkBoxTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_profile_timeframe_label"
            android:textSize="@dimen/text_size_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addTimeframeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_profile_add_timeframe_button_text"
            style="@style/SecondaryButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeframesListText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/addTimeframeButton"
            tools:text="Bluetooth on, Volume to 2, Wifi disabled" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin_top"
        android:text="@string/add_profile_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutTime" />

</androidx.constraintlayout.widget.ConstraintLayout>