<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/fragment_padding_vertical"
    android:paddingHorizontal="@dimen/fragment_padding_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.AddPlaceManualFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin_top"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTitleManual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_place_title_label"
            android:inputType="textCapWords"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputLayoutAddress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputLayoutTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/add_place_address_label"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addPlaceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin_top"
        android:text="@string/add_place_manual_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputLayoutAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>