<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".views.profiles.fragments.AddActionVolumeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/typeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dropdownLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_action_volume_type_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/valueDropdown"
            android:layout_width="@dimen/slider_width_fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/label_input_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dropdownLabel"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/valueLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeLayout">

        <TextView
            android:id="@+id/valueLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_action_value_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/valueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_icon_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/valueLabel"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="9" />

        <com.google.android.material.slider.Slider
            android:id="@+id/valueSlider"
            android:layout_width="@dimen/slider_width_fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/label_input_margin"
            android:valueFrom="0"
            android:stepSize="1"
            app:labelBehavior="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/valueText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sliderStartValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_icon_margin"
            android:text="@string/volume_slider_min_val"
            app:layout_constraintStart_toStartOf="@+id/valueSlider"
            app:layout_constraintTop_toBottomOf="@+id/valueSlider" />

        <TextView
            android:id="@+id/sliderEndValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_icon_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valueSlider"
            tools:text="10" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>